tests/syntax_error/struct_default.jou
struct Foo:
    num: int = 1  # Error: struct members cannot have default values
